docs: Agent 规范合并为根目录 Agent.md——原开发文档/Agent规范.md 的项目细则并入第7节后删除，路线图链接同步